<resources>
    <string name="app_name">Schmecken</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">first fragment</string>
    <string name="second_fragment">second fragment</string>
    <string name="third_fragment">third fragment</string>
    <string name="fourth_fragment">fourth fragment</string>
    <string name="dishname">dishname</string>
    <string name="image_of_the_dish">Image of the dish</string>
    <string name="dishes">Dishes</string>
    <string name="textmid">text in middle</string>
    <string name="time">Time:</string>
    <string name="cautions">Cautions:</string>
    <string name="cuisine_type">Cuisine Type:</string>
    <string name="diet_labels">Diet Labels:</string>
    <string name="dish_type">Dish Type:</string>
    <string name="health_labels">Health Labels:</string>
    <string name="todo">TODO</string>
    <string name="meal_type">Meal Type:</string>
    <string name="ingredients_of">Ingredients of</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="count">Count</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="recomended_diet">Recomended diet</string>
</resources>